atualizando estrutura